--- a/changelog.mdx
+++ b/changelog.mdx
@@ -50,6 +50,7 @@ This is useful when you have a large number of features that you want to recompu
 - `DataSet.to_polars()/.to_pandas()` now accept `output_ts: str` and `output_id: str` to customize the name of the timestamp and id columns in the output dataframe.
 - Feature and resolver discovery during `chalk apply` is roughly twice as fast as of `chalkpy v2.33.9`.
 - Dataset downloads no longer have any dependency on locally registered features, which resolves crashes for certain dataset management workflows.
+- `ChalkClient.query` now supports `request_timeout: float`, which is passed to the underlying `requests.request` call.
 
 ## Mar 8, 2024
 
