docs: add docs for hwm metrics export

--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -213,4 +213,15 @@ The response counts by HTTP response code.
 
 </Attribute>
 
+<Attribute field={'resolver_high_water_marks'} kind={'Gauge'}>
+    The current max_ingested_timestamp in UNIX epoch time for resolvers.
+
+    <SubAttributeTable title={'Tags'}>
+        <SubAttribute field={'id'} kind={'String'}>
+            The ID of the resolver.
+        </SubAttribute>
+    </SubAttributeTable>
+
+</Attribute>
+
 </AttributeTable>
