--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -34,7 +34,8 @@ class User:
 Here, the `num_failed_logins` feature supports three windows:
 the number of failed logins in the last 10 minutes, 30 minutes, and 1 day.
 
-A windowed feature can be referenced in a query or a resolver in the following, equivalent ways:
+A windowed feature can be referenced in a query or a resolver in the following, equivalent ways. Each
+column below shows the possible syntax variants for a given time window.
 
 ```py
 # Note: The last value for each list is the time converted to seconds
