Use environment ids instead of environment names

--- a/github-actions.mdx
+++ b/github-actions.mdx
@@ -36,7 +36,7 @@ This step supports the following inputs:
     # Optional: Version of the Chalk CLI to install. Defaults to `latest`
     version: latest
     # Optional: Environment to use. Optional for environment-scoped tokens.
-    environment: dev
+    environment: <environment id>
     # Optional: Used for Hybrid Cloud deployments
     api-host: https://custom.deployment.com/
 ```
@@ -72,7 +72,7 @@ This step supports the following inputs:
     # Optional: Version of the Chalk CLI to install. Defaults to `latest`
     version: latest
     # Optional: Environment to use. Optional for environment-scoped tokens.
-    environment: dev
+    environment: <environment id>
     # Optional: Used for Hybrid Cloud deployments
     api-host: https://custom.deployment.com/
 ```
