--- a/bigquery.mdx
+++ b/bigquery.mdx
@@ -22,6 +22,8 @@ Chalk's [BigQuery](https://cloud.google.com/bigquery)
 integration can be used as a [SQL source](/docs/sql).
 
 ```py
+from chalk.sql import BigQuerySource
+
 bq = BigQuerySource()
 
 @online
