--- a/has-many.mdx
+++ b/has-many.mdx
@@ -27,7 +27,8 @@ class Transfer:
     # note, the annotation must be a string reference because User is
     # defined after Transfer.
 
-    user_id: "User.id"     amount: float
+    user_id: "User.id"
+    amount: float
 
 @features
 class User:
