--- a/has-many.mdx
+++ b/has-many.mdx
@@ -101,9 +101,9 @@ the one-to-many relationship is to add a `User` to the `Transfer` class:
 
 ### Many-to-many
 
-Many-to-many is defined by a has-many relationship on both sides of the relation.
-As before, you don't need to specify the join condition a second time
-so long as the join condition is symmetric.
+Many-to-many relations are defined by has-many relationship on both sides of the relation.
+As before, you don't need to specify the join condition a second time if the join
+condition is symmetric.
 
 <PyDiffEditor html={manyToManyDiff} />
 
