clean and add punc

--- a/has-many.mdx
+++ b/has-many.mdx
@@ -11,7 +11,7 @@ import { TipInfo } from '@/components/Tip'
 
 ---
 
-Has-many relationships link a feature to many instances of another feature
+Has-many relationships link a feature to many instances of another feature.
 
 ## Recommended Implementation
 
