--- a/has-one.mdx
+++ b/has-one.mdx
@@ -10,7 +10,7 @@ import { TipInfo } from '@/components/Tip'
 
 ---
 
-Has-one relationships join features to a single instance of another feature.
+Has-one relationships link a feature to a single instance of another feature.
 
 ## Recommended Implementation
 
