--- a/has-one.mdx
+++ b/has-one.mdx
@@ -14,7 +14,7 @@ Has-one relationships link a feature to a single instance of another feature.
 
 ## Recommended Implementation
 
-Below is the simplest way to specify a join for a has-one relationship. In the example below,
+The simplest way to specify a join for a has-one relationship is implicitly. In the example below,
 a `User` is linked to their `Profile`.
 
 ```py
